# TWIN

./: .gitignore  .gitmodules  README.md  pyproject.toml
evals/: eval.sh
training/: prepare_training_data.py  prepare_training_data.sh  reward.py  run_grpo.sh
