[project]
name = "twin"
version = "0.0.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ninja",
    "lmms-eval",
    "omegaconf>=2.1,<3",
    "verl",
    "uvloop<=0.22"
]

[tool.uv.sources]
lmms-eval = { path = "modules/lmms-eval", editable = true }
verl = { path = "modules/verl", editable = true }

[tool.uv]
no-build-isolation-package = ["flash-attn"]
override-dependencies = ["xformers==0.0.29.post2", "uvloop<0.22",]
